update share popup & meta tags

--- a/public/static/locales/en/common.json
+++ b/public/static/locales/en/common.json
@@ -13,14 +13,13 @@
   "button_label_submit": "Submit",
   "button_label_share": "Share This",
   "button_label_next": "Next",
+  "button_label_share_now": "Share now",
 
-  "square_share": "Square Image",
-  "square_share_description": "Image for Social Media Post",
-  "story_share": "Story-style Image",
-  "story_share_description": "Vertical Image for Story",
+  "share_title": "Share with Others",
+  "square_share": "Share to your Feed",
+  "story_share": "Share to your Stories",
   "image_share_not_supported": "Your browser doesn't support image sharing",
-  "url_share": "URL",
-  "url_share_description": "Link to this page",
+  "url_share": "Share URL",
   "thanks_for_response": "Thank you for your participation!",
   "your_hope_for": "Your hope for 2021?",
   "about": "About"
