--- a/public/static/locales/id/common.json
+++ b/public/static/locales/id/common.json
@@ -5,14 +5,13 @@
   "button_label_submit": "Kirim",
   "button_label_share": "Bagikan",
   "button_label_next": "Lanjut",
+  "button_label_share_now": "Bagikan",
 
-  "square_share": "Persegi (Gambar)",
-  "square_share_description": "Gambar untuk posting",
-  "story_share": "Story (Gambar)",
-  "story_share_description": "Gambar untuk story",
+  "share_title": "Berbagi dengan yang lain",
+  "square_share": "Bagikan ke Feed",
+  "story_share": "Bagikan ke Story",
   "image_share_not_supported": "Browser tidak mendukung sharing gambar",
-  "url_share": "URL",
-  "url_share_description": "Link ke halaman ini",
+  "url_share": "Bagikan URL",
   "your_hope_for": "Apa yang kamu inginkan di 2021?",
   "about": "Tentang",
   "thanks_for_response": "Terima kasih sudah berbagi!"
